# PEliminator

./: .gitignore  README.md
analyzer/: drift_data.pickle  encoder_data.pickle  files_with_dates.pickle  main.py  new_data.txt  old_data.txt  test_run.py
analyzer/trash/: Capture_00001.fits  Capture_00002.fits  Capture_00003.fits  Capture_00004.fits  Capture_00005.fits
analyzer/widgets/: automat.py  corrector.py  data_aggregator.py  encoder_manager.py  fragment_displayer.py  global_settings.py  image_calculator.py  image_displayer.py  image_files_list.py  image_provider.py  online_analyzer.py  periods_list.py  plotter.py  speedcalculator.py  text_indicator.py  times_generator.py
common/: global_settings.py  serial_reader.py  utils.py
freecad/: encoder_case.FCStd  encoder_case.FCStd1
freecad/focuser/: encoder_with_focuser.FCStd
freecad/smaller/: encoder_with_focuser.FCStd  small_encoder -wersja wcięta.FCStd  small_encoder wersja 2.FCStd  small_encoder.FCStd  (+11 more)
gui/: image1.fits  image2.fits  main.py  mosaic_maker.py  mount_client_test.py  mount_server.py  serial_reader.py  star_tracking_main.py  template_image_list.txt  test_solve.py
mount/: AbsoluteEncoder.cpp  AbsoluteEncoder.h  CorrectionDataHolder.h  EncoderFeedback.h  SelectStateController.h  Serializable.h  SlewingController.cpp  SlewingController.h  Stepper.cpp  Stepper.h  Timing.h  TrackingController.h  Utilities.h  mount.ino
mount_server/: mount_server.ino
new_gui/: requirements.txt  setup.py
opticalEncoder/: main.py  preliminary.csv
read_encoder/: CMakeLists.txt  README.txt  read_encoder.cpp
(+146 files in other folders)
